<resources>
    <string name="app_name">memorize</string>
    <string name="example">example</string>
    <string name="checkAnswerButton">Check</string>
    <string name="questionLabel">Question:</string>
    <string name="answerLabel">Answer:</string>
    <string name="nextButton">continue</string>
    <string name="correctAnswerMessage">Correct!</string>
    <string name="a_happy_girl">a happy girl</string>
    <string name="wrongAnswerMessage">Sorry, wrong answer</string>
    <string name="correctAnswerLabel">Correct answer:</string>
    <string name="sad_girl">sad girl</string>
    <string name="last_question_message">You answered all the questions</string>
    <string name="well_done">Well Done!</string>
    <string name="return_message">Return</string>
    <string name="question_icon">Question Icon</string>
    <string name="edit_quiz_button">edit quiz</string>
    <string name="quiz_name">Quiz Name</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="save">Save</string>
    <string name="save_quiz">save quiz</string>
    <string name="cancel_edit_quiz">cancel edit quiz</string>
    <string name="add_question">add question</string>
    <string name="submit">Submit</string>
    <string name="editQuestionLabel">Q:</string>
    <string name="editAnswerLabel">A:</string>
    <string name="delete">Delete</string>
    <string name="delete_question">delete question</string>
    <string name="dialog_delete_quiz">Do you really want to delete this quiz?</string>
    <string name="cancel">Cancel</string>
</resources>